[gd_scene load_steps=11 format=2]

[ext_resource path="res://PlayerShip/Sprites/DefaultPlayerShip-Sheet.png" type="Texture" id=1]
[ext_resource path="res://PlayerShip/Scripts/PlayerShip.gd" type="Script" id=2]
[ext_resource path="res://ZoomingCamera/ZoomingCamera2D.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "idle"
frame = 5
playing = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PoolVector2Array( -26, 13, -23, 40, -20, 59, -8, 64, 8, 64, 20, 59, 23, 40, 26, 13, 25, -14, 21, -33, 13, -49, 0, -57, -13, -49, -21, -33, -25, -14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -26, 13, -23, 40, -20, 59, -8, 64, 8, 64, 20, 59, 23, 40, 26, 13, 25, -14, 21, -33, 13, -49, 0, -57, -13, -49, -21, -33, -25, -14 )

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
